Edited wiki page CommunityExamples through web user interface.

--- a/wiki/CommunityExamples.wiki
+++ b/wiki/CommunityExamples.wiki
@@ -28,3 +28,4 @@
  * http://www.verizonenterprise.com/security/blog/index.xml?postid=1611
  * http://www.verizonenterprise.com/security/blog/index.xml?postid=1613
  * http://www.verizonenterprise.com/security/blog/index.xml?postid=1615
+ * VZ - the [larger https://speakerdeck.com/technoskald/open-source-threat-intelligence] context
