--- a/wiki/CommunityRules.wiki
+++ b/wiki/CommunityRules.wiki
@@ -11,5 +11,5 @@ This doc aims to set the expectations of the CIF community; it's not a set of re
  # Vendors ARE more than welcome, ultimately we want integration, this is how we train you to be better
  # NO Sales Pitches for non-open source, freely available software unless it's directly relevant to CIF or CIF integration.
  # Vendors SHALL NOT compare their products to another in this forum (you have a website; you may do it there)
- # Vendors that leverage the CIF community as a means for "cold-calling" it's members, at the discretion of the moderators will be banned.
+ # Vendors that leverage the CIF community as a means for "cold-calling" it's members, at the discretion of the moderators will be banned and publicly cited.
  # we reserve the right to kick anyone off the list for these reasons or any other reason deemed by the moderators / community at-large
