--- a/wiki/CommunityExamples.wiki
+++ b/wiki/CommunityExamples.wiki
@@ -13,7 +13,7 @@
  * http://dfirjournal.wordpress.com/2012/04/28/cif-integration-with-arcsight
  * http://dfirjournal.wordpress.com/2012/04/29/using-cif-to-create-content-for-arcsight-part-1
  * http://dfirjournal.wordpress.com/2012/06/10/using-cif-to-create-content-for-arcsight-part-2
- * http://ossectools.blogspot.com/2012/06/elsa-with-collective-intelligence.html
+ * [http://ossectools.blogspot.com/2012/06/elsa-with-collective-intelligence.html ELSA with the Collective Intelligence Framework]
  * [http://eyeis.net/2012/09/more-advanced-querying-cif-data-with-splunk More (Advanced) Querying CIF Data With Splunk]
  * [http://infosecmatters.blogspot.co.uk/2013/05/using-cif-with-silk.html Using CIF with SiLK]
 
