--- a/wiki/DeveloperWorkflow_v1.wiki
+++ b/wiki/DeveloperWorkflow_v1.wiki
@@ -6,6 +6,8 @@
 
 Our developer workflow is done primarily through git and [https://github.com github]. More generalized information on how to contribute to a project can be found [https://help.github.com/articles/fork-a-repo here].
 
+Other mailing list threads that can be used for [https://groups.google.com/forum/?fromgroups#!tags/ci-framework/developer reference]
+
 = Details =
 == Forking ==
 
