Edited wiki page ServerInstall_DebianWheezy_v1 through web user interface.

--- a/wiki/ServerInstall_DebianWheezy_v1.wiki
+++ b/wiki/ServerInstall_DebianWheezy_v1.wiki
@@ -41,9 +41,16 @@ $ cd zeromq-2.2.0
 $ ./configure && make && sudo make install
 $ sudo ldconfig
 }}}
+ # install Net::Abuse::Utils manually
+{{{
+$ wget http://search.cpan.org/CPAN/authors/id/M/MI/MIKEGRB/Net-Abuse-Utils-0.13.tar.gz
+$ tar xvzf Net-Abuse-Utils-0.13.tar.gz
+$ cd Net-Abuse-Utils-0.13/
+$ perl Makefile.PL && make && sudo make install
+}}}
  # Install the remaining CPAN modules
 {{{
-$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Module::Build,Test::SharedFork,Test::TCP,Net::Abuse::Utils,Regexp::Common::net::CIDR,LWP::Protocol::https,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Snort::Rule,Time::HiRes,Net::Abuse::Utils::Spamhaus,Net::SSLeay,Net::DNS::Match,Log::Dispatch,Sys::MemInfo,LWPx::ParanoidAgent,ZeroMQ'
+$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Module::Build,Test::SharedFork,Test::TCP,Net::Abuse::Utils,Regexp::Common::net::CIDR,LWP::Protocol::https,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Snort::Rule,Time::HiRes,Net::Abuse::Utils::Spamhaus,Net::SSLeay,Net::DNS::Match,Log::Dispatch,Sys::MemInfo,LWPx::ParanoidAgent,ZeroMQ,Net::Whois::IP,Net::DNS,Email::Address'
 }}}
  # Linux::Cpuinfo needs to be installed manually due to a signature bug, this will be fixed in v1-FINAL
 {{{
