--- a/wiki/DeveloperWorkflow_v1.wiki
+++ b/wiki/DeveloperWorkflow_v1.wiki
@@ -23,7 +23,7 @@ git clone --recursive https://github.com/<username>/cif-v1.git
 }}}
 
 == Branching ==
-v1 is split into several [http://git-scm.com/book/en/Git-Tools-Submodules sub-modules] under the https://github.com/collectiveintel/cif-v1 cif-v1.git] repo:
+v1 is split into several [http://git-scm.com/book/en/Git-Tools-Submodules sub-modules] under the [https://github.com/collectiveintel/cif-v1 cif-v1.git] repo:
  * [https://github.com/collectiveintel/libcif/tree/v1 libcif.git]
  * [https://github.com/collectiveintel/libcif-dbi/tree/v1 libcif-dbi.git]
  * [https://github.com/collectiveintel/cif-smrt/tree/v1 cif-smrt.git]
@@ -34,6 +34,7 @@ v1 is split into several [http://git-scm.com/book/en/Git-Tools-Submodules sub-mo
 
 If you wish to make changes to any of these sub-modules, you must first change to the corresponding directory within the cif-v1.git repo, then create a new branch for your changes:
 {{{
+cd <sub-module>
 git checkout master -b <your branch name>
 }}}
 
