--- a/wiki/DeveloperWorkflow_v1.wiki
+++ b/wiki/DeveloperWorkflow_v1.wiki
@@ -25,8 +25,10 @@ git clone --recursive https://github.com/<username>/cif-v1.git
 == Branching ==
 v1 is split into several [http://git-scm.com/book/en/Git-Tools-Submodules sub-modules] under the [https://github.com/collectiveintel/cif-v1 cif-v1.git] repo:
  * [https://github.com/collectiveintel/libcif/tree/v1 libcif.git]
+ * [https://github.com/collectiveintel/cif-protocol/tree/v1 cif-protocol.git] (under 'libcif/protocol/')
  * [https://github.com/collectiveintel/libcif-dbi/tree/v1 libcif-dbi.git]
  * [https://github.com/collectiveintel/cif-smrt/tree/v1 cif-smrt.git]
+ * [https://github.com/collectiveintel/cif-smrt-rules/tree/v1 cif-smrt-rules.git] (under 'cif-smrt/rules/')
  * [https://github.com/collectiveintel/cif-router/tree/v1 cif-router.git]
  * [https://github.com/collectiveintel/libcif-dbi-asn libcif-dbi-asn.git]
  * [https://github.com/collectiveintel/libcif-dbi-rir libcif-dbi-rir.git]
