--- a/wiki/DeveloperWorkflow_v1.wiki
+++ b/wiki/DeveloperWorkflow_v1.wiki
@@ -29,7 +29,7 @@ v1 is split into several [http://git-scm.com/book/en/Git-Tools-Submodules sub-mo
 ||[https://github.com/collectiveintel/libcif-dbi-cc libcif-dbi-cc.git] || the country code db plugin (indexer) ||
 
 == Cloning ==
-You can follow instruction provided on github page. Basically, you set you username and clone the git repository:
+You can follow instruction provided on github page. Basically, you set you username and clone the git repository (using libcif.git as an example):
 
 {{{
 git clone --recursive https://github.com/<username>/libcif.git
@@ -37,7 +37,7 @@ git clone --recursive https://github.com/<username>/libcif.git
 
 == Branching ==
 
-If you wish to make changes to any of these sub-modules, you must:
+If you wish to make changes to any of these sub-modules, you must (using libcif.git as an example):
  # change to the corresponding directory within the repo
 {{{
 cd libcif
