--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -147,6 +147,8 @@ $ vi ~/.cif
 datatypes = infrastructure,domain,url,email,search,malware
 # if we enabled asn/cc/rir in the configure
 # datatypes = infrastructure,domain,url,email,search,malware,cc,asn,rir
+# if you're going to enable feeds
+# feeds = infrastructure,domain,url,email,search,malware
 
 # enable your own groups is you start doing data-sharing with various groups
 #groups = everyone,group1.example.com,group2.example.com,group3.example.com
