Edited wiki page FeedConfig_v1 through web user interface.

--- a/wiki/FeedConfig_v1.wiki
+++ b/wiki/FeedConfig_v1.wiki
@@ -31,7 +31,7 @@ CIF comes with a variety of pre-built feed configurations, with that there are m
 || assessment || <string> || see [TaxonomyAssessment_v1 Assessment] || no ||
 || confidence || <int> || see [TaxonomyConfidence_v1 Confidence] || no ||
 || description || <string> || short (1-2 space delimited word) description of the activity (eg: tdss spyeye) || no ||
-|| detection || <string> || hourly/daily: what to "fuzz" the detection string to || no ||
+|| detection || <string> || hourly/daily: useful if you do not have a timestamp || no ||
 || disabled || <string> || true, false || no ||
 || feed || <uri><filename> || {{{http://example.com/feed.csv}}} or /tmp/feed.csv || yes ||
 || feed_user || <string> || username (Basic authentication) || no ||
