Edited wiki page Sharing_Threat_Intelligence_v1 through web user interface.

--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -1,6 +1,6 @@
 #summary introduction to sharing threat intelligence
 #labels v1
 
-= Sharing threat intelligence =
+= Sharing Threat Intelligence =
 
 Hello World
