--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -3,6 +3,8 @@
 
 = Sharing Threat Intelligence =
 
+== Minimum Sharing ==
+
 === Common Parameters ===
 
 || Parameter Name || Values || Description ||
@@ -35,3 +37,5 @@
 "http://www.example.com/bad.php","2013-06-16T12:00:00Z","malware","public"
 "https://controller.example.com/bad.php","2013-06-16T12:00:00Z","botnet","private"
 }}}
+
+== Advanced Sharing ==
