Edited wiki page Sharing_Threat_Intelligence_v1 through web user interface.

--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -41,4 +41,5 @@
 == Advanced Sharing ==
 
 === Common Parameters ===
+|| Parameter Name || Values || Description ||
 || restriction || <string> || public, default, need-to-know, private ||
