Edited wiki page Sharing_Threat_Intelligence_v1 through web user interface.

--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -42,4 +42,5 @@
 
 === Common Parameters ===
 || Parameter Name || Values || Description ||
+|| confidence || <int> || see [TaxonomyConfidence_v1 Confidence] ||
 || restriction || <string> || public, default, need-to-know, private ||
