--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -45,4 +45,7 @@
 || alternativeid || <string> || usually a url pointing to the original data point (as a reference id) ||
 || alternativeid_restriction || <string> || public, default, need-to-know,private ||
 || confidence || <int> || see [TaxonomyConfidence_v1 Confidence] ||
+|| description || <string> || short (1-2 space delimited word) description of the activity (eg: tdss spyeye) ||
 || restriction || <string> || public, default, need-to-know, private ||
+|| severity || <string> || see [TaxonomySeverity_v1 Severity] ||
+|| source || <string> || source of the feed, usually the domain where the feed is from (eg: example.com) ||
