--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -5,7 +5,7 @@
 
 == Minimum Sharing ==
 
-=== Common Parameters ===
+==== Common Parameters ====
 
 || Parameter Name || Values || Description ||
 || address || <string> ||a IP address, URI, domain, (md5/sha1) hash ||
@@ -14,7 +14,7 @@
 || portlist || <int> || 22,25,80 ||
 || protocol || <int> <string> || 6 or tcp, 17 or udp ||
 
-=== Infrastructure ===
+==== Infrastructure ====
 
 {{{
 #address,portlist,protocol,detecttime,assessment
@@ -22,7 +22,7 @@
 "192.168.10/24","80,443","tcp","2013-06-17T08:01:56Z","botnet"
 }}}
 
-=== Domain ===
+==== Domain ====
 
 {{{
 #address,detecttime,assessment,restriction
@@ -30,7 +30,7 @@
 "car.example.com","2013-06-16T12:00:00Z","malware"
 }}}
 
-=== URI ===
+==== URI ====
 
 {{{
 #address,detecttime,assessment,restriction
@@ -40,7 +40,7 @@
 
 == Advanced Sharing ==
 
-=== Common Parameters ===
+==== Common Parameters ====
 || Parameter Name || Values || Description ||
 || alternativeid || <string> || usually a url pointing to the original data point (as a reference id) ||
 || alternativeid_restriction || <string> || public, default, need-to-know,private ||
