Edited wiki page Sharing_Threat_Intelligence_v1 through web user interface.

--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -3,6 +3,8 @@
 
 = Sharing Threat Intelligence =
 
+At some point you may want to start sharing your threat intelligence with others. This may be in public like [https://zeustracker.abuse.ch/ Zeustracker] or with trusted private partners/communities. This is a introductory guide to sharing threat intelligence.
+
 == Minimum Sharing ==
 
 ==== Common Parameters ====
